Added jvmargs to solve kapt compile problem