@@ -1,3 +1,5 @@
+import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+
 plugins {
     id("java-library")
     id("maven-publish")
@@ -47,6 +49,14 @@ dependencies {
 
 test {
     useJUnitPlatform()
+}
+
+tasks.withType(KotlinCompile).configureEach {
+    compilerOptions {
+        kotlinDaemonJvmArguments.addAll(
+                "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+        )
+    }
 }
 
 dependencyCheck {
